# Metric3D

./: .gitignore  README.md  setup.cfg
metric_3D/metric_3D/: wrapper.py
metric_3D/metric_3D.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
metric_3D/metric_3D/mono/model/model_pipelines/: __base_model__.py  dense_pipeline.py
metric_3D/metric_3D/mono/utils/: comm.py  running.py
