[metadata]
name = metric-3D
version = 0.1.6
author = 
author_email = 
url = https://github.com/pollen-robotics/Metric3D
description = Python template project
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =metric_3D
install_requires = huggingface_hub
                   torch>=2.0.1
                   opencv-contrib-python==4.8.0.74
                   torchvision == 0.15.2
                   numpy == 1.23.1
                   xformers == 0.0.21
                   pillow==10.3.0
                   mmcv==2.2.0
                   timm==0.9.16


[options.packages.find]
where=metric_3D

[options.package_data]
* = *.yaml, *.pt

[options.entry_points]
console_scripts = 